numpy/typing/tests/data/fail/lib_utils.pyi
import numpy as np

np.byte_bounds(1)  # E: incompatible type

np.lookfor(None)  # E: incompatible type
